<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="reveal_token"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_token"
        android:shortcutShortLabel="@string/shortcut_token_short_label"
        android:shortcutLongLabel="@string/shortcut_token_long_label">
        <intent
            android:action="com.lamuier.cursorT.action.SHORTCUT_REVEAL_TOKEN"
            android:targetPackage="com.lamuier.cursorT"
            android:targetClass="com.lamuier.cursorT.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="manage_accounts"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_accounts"
        android:shortcutShortLabel="@string/shortcut_accounts_short_label"
        android:shortcutLongLabel="@string/shortcut_accounts_long_label">
        <intent
            android:action="com.lamuier.cursorT.action.SHORTCUT_MANAGE_ACCOUNTS"
            android:targetPackage="com.lamuier.cursorT"
            android:targetClass="com.lamuier.cursorT.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="settings"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_settings"
        android:shortcutShortLabel="@string/shortcut_settings_short_label"
        android:shortcutLongLabel="@string/shortcut_settings_long_label">
        <intent
            android:action="com.lamuier.cursorT.action.SHORTCUT_SETTINGS"
            android:targetPackage="com.lamuier.cursorT"
            android:targetClass="com.lamuier.cursorT.MainActivity" />
    </shortcut>
</shortcuts>
